tests/snapshots/errors/vec_new_wrong_args.mc
// Error: Vec<int>::`new`() should not take any arguments
let v = Vec<int>::`new`(10);
